--- a/news-template/public/index.html
+++ b/news-template/public/index.html
@@ -10,7 +10,7 @@
       content="News | Lorem ipsum dolor sit amet"
     />
 
-    <title>News Template</title>
+    <title>Group01_News</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
